tests/snapshots/examples_fixtures/roots__duplicate_root_import_error.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/roots/duplicate_root_import_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E011]: Private Member

Cannot access private member `value`.

  examples/roots/duplicate_root_import_error.flx:5:1
  |
5 | Dup.Mod.value();
  | ^^^^^^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.
== stdout ==
<not executed>
